fix the responsive lotti animation in the css file, put z-index, add lotti to base.html

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -128,7 +128,7 @@ li { font-size: var(--font-size-16); font-family: var(--font-sans-serif-condense
 .main-position { margin: 2rem 0rem 0rem 0rem } /* top right bottom left */
 .ms-6 { margin-left: 0rem; }
 
-#backgroundAnimation { position: fixed; top: 0; left: 00px; width: 100%; height: 100%; opacity: 0.22; }
+#backgroundAnimation { position: fixed; top: 0; left: 00px; width: 100%; height: 100%; opacity: 0.22; z-index: -1;}
 
 @media (min-width: 576px) {                                         /* Small screens */
     p { font-size: var(--font-size-18); font-family: var(--font-sans-serif-condensed); font-weight: var(--font-weight-regular)}
@@ -154,7 +154,7 @@ li { font-size: var(--font-size-16); font-family: var(--font-sans-serif-condense
     .main-position { margin: 4rem 0rem 0rem 0.5rem }
     .ms-6 { margin-left: 2rem; }
 
-    #backgroundAnimation { position: fixed; top: 0; left: 00px; width: 100%; height: 100%; opacity: 0.22; }
+    #backgroundAnimation { position: fixed; top: 0; left: 00px; width: 100%; height: 100%; opacity: 0.22; z-index: -1;}
 }
 
 @media (min-width: 768px) {                                         /* Medium screens */
@@ -181,7 +181,7 @@ li { font-size: var(--font-size-16); font-family: var(--font-sans-serif-condense
     .main-position { margin: 6rem 0rem 0rem 1rem }
     .ms-6 { margin-left: 2rem; }
 
-    #backgroundAnimation { position: fixed; top: 0; left: 00px; width: 100%; height: 100%; opacity: 0.22; }
+    #backgroundAnimation { position: fixed; top: 0; left: 00px; width: 100%; height: 100%; opacity: 0.22; z-index: -1;}
 }
 
 @media (min-width: 992px) {                                        /* Large screens */
@@ -208,7 +208,7 @@ li { font-size: var(--font-size-16); font-family: var(--font-sans-serif-condense
     .main-position { margin: 8rem 0rem 0rem 1.5rem }
     .ms-6 { margin-left: 4rem; }
 
-    #backgroundAnimation { position: fixed; top: 0; left: 100px; width: 100%; height: 100%; opacity: 0.22; }
+    #backgroundAnimation { position: fixed; top: 0; left: 100px; width: 100%; height: 100%; opacity: 0.22; z-index: -1;}
 }
 
 @media (min-width: 1200px) {                                        /* Extra large screens */
